# ddd-sample-in-cpp

./: .gitignore  LICENSE  README.md
cargo/include/app/service/: CargoApi.h  CargoMsg.h
cargo/src/infra/: CargoProvider.cpp  CargoProviderImpl.cpp  CargoRepo.cpp  CargoRepoImpl.cpp
cargo/test/: TestCargo.cpp
man/: CMakeLists.txt
man/include/app/service/: ManApi.h
man/include/domain/model/account/: Account.h  AccountInfo.h  MoneyDest.h  MoneyDestination.h  MoneySource.h  MoneySrc.h  Phone.h  PhoneProvider.h
man/include/domain/model/comm-role/: ManInfo.h  Parent.h  Worker.h
man/include/domain/model/poor-man/: Cooker.h  Employee.h  PoorMan.h  PoorManRepo.h
man/include/domain/model/rich-man/: Boss.h  Investor.h  RichMan.h  RichManRepo.h
man/include/domain/service/: AccountService.h  AmountQuery.h  ManService.h  PoorManService.h  RichManService.h  TransferMoney.h
man/src/app/service/: ManApi.cpp
man/src/domain/model/account/: AccountInfo.cpp  MoneyDest.cpp  MoneyDestination.cpp  MoneySource.cpp  Phone.cpp  PhoneProvider.cpp
man/src/domain/model/comm-role/: ManInfo.cpp  Parent.cpp
man/src/domain/model/poor-man/: Cooker.cpp  Employee.cpp  PoorMan.cpp  PoorManRepo.cpp
man/src/domain/model/rich-man/: Boss.cpp  Investor.cpp  RichMan.cpp  RichManRepo.cpp
man/src/domain/service/: AccountService.cpp  AmountQuery.cpp  ManService.cpp  PoorManService.cpp  RichManService.cpp  TransferMoney.cpp
man/src/infra/gateways/: PhoneProviderImpl.cpp
man/src/infra/repositories/: PoorManRepoImpl.cpp  RichManRepoImpl.cpp
man/test/: TestMan.cpp
(+19 files in other folders)
